--- a/css-variables-3/index.html
+++ b/css-variables-3/index.html
@@ -6,6 +6,63 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Update CSS variables using <span class="h2">JS</span></h2>
+    <div class="controlls">
+        <label for="spacing">Spacing</label>
+        <input type="range" id="spacing" name="spacing" min="10" max="200" value="10" data-sizing="px">
+
+        <label for="blur">Blur</label>
+        <input type="range" id="blur" name="blur" min="0" max="25" value="0" data-sizing="px">
+
+        <label for="base">Base Color</label>
+        <input type="color" id="base" name="base" value="#8a5454">
+    </div>
+
+    <img src="../drumpkit-1/assets/background.jpg" alt="">
+
+    <style>
+                                                                     
+        :root{
+            --base :#8a5454;
+            --spacing : 10px;
+            --blur : 10px;
+        }
+
+        img{
+            padding: var(--spacing);
+            filter: blur(var(--blur));
+           background: var(--base);
+            object-fit: cover;
+            max-width: 100%;
+        }
+        .h2{
+            color: var(--base);
+        }
+        body{
+            padding: 0;
+            margin: 0;
+            text-align: center;   
+            width: 100vh;
+            height: 10vh;
+
+        }
+        .controlls{
+            margin-bottom: 50px;
+        }
+        input{
+            width: 100px;
+        }
+    </style>
+
+    <script>
+        const inputs = document.querySelectorAll('.controlls input')//input is a nodelist not an array , difference is that it does not h
+        function updateInput(){
+            const suffix = this.dataset.sizing || '';
+            console.log(suffix)
+            document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix)
+        }
+        inputs.forEach(input=>input.addEventListener('change',updateInput))
+        inputs.forEach(input=>input.addEventListener('mousemove',updateInput))
+    </script>
 </body>
-</html>
+</html>          
