--- a/10-holdshift-check-multiplecheckbox/index.html
+++ b/10-holdshift-check-multiplecheckbox/index.html
@@ -70,6 +70,9 @@
             margin: 30px !important;
 
         }
+        .item:has(input:checked) p{
+            text-decoration: line-through;
+        }
 
         .item p {
             padding: 30px;
