--- a/17-sorting-without-articles/index.html
+++ b/17-sorting-without-articles/index.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <div class="bands"></div>
+    <style>
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .bands {
+            background: #222;
+            color: #fff;
+            width: 30%;
+            font-size: 30px;
+
+        }
+        
+    </style>
 
     <script>
 
-        function strip(word){
-            return word.replace(/^(the|an)/i,"")
+        function strip(word) {
+            return word.replace(/^(the|an)/i, "")
         }
         const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
-        bands.sort((a,b)=>{
-            const name1 = strip(a).toLowerCase()
-            const name2 = strip(b).toLowerCase()
-            return name1>name2 ? 1 : -1
-
+        bands.sort((a, b) => {
+            strip(a) > strip(b) ? 1 : -1
         })
-        console.log(bands)
+        let html = ''
+        const band = document.querySelector('.bands')
+        html = bands.map(each => `<p>${each}</p>`).join('');
+        band.innerHTML = html
     </script>
 </body>
+
 </html>
