--- a/05-flex-panels-image-gallery/index.html
+++ b/05-flex-panels-image-gallery/index.html
@@ -88,7 +88,7 @@
         }
 
         .panel1 {
-            background-image: url(../drumpkit-1/assets/background.jpg);
+            background-image: url(./feel-the-beauty-of-nature-with-all-your-senses.webp);
         }
 
         .panel2 {
