--- a/08-html5-canvas/index.html
+++ b/08-html5-canvas/index.html
@@ -64,7 +64,7 @@
             isDrawing = true;
             lastX   =  e.offsetX;
             lastY = e.offsetY
-            console.log(lastX, lastY);
+            // console.log(lastX, lastY);
         })
         canvas.addEventListener('mousemove', drawNow)
 
