--- a/01-drumpkit/index.html
+++ b/01-drumpkit/index.html
@@ -80,6 +80,26 @@
     keys.forEach((key)=>{
         key.addEventListener('transitionend',removeTransition)
     })
+
+
+    // window.addEventListener('keydown',play)
+    // function play(e){
+    //     const audio = document.querySelector(`audio[data-key = "${e.keyCode}" ]`) 
+    //     const key = document.querySelector(`.key[data-key ="${e.keyCode}" ]`)
+    //     key.classList.add('playing')
+    //     if(!audio) return
+
+    //     audio.currentTime = 0
+    //     audio.play()
+    // }
+    // function removeTransition(e){
+    //     if(e.propertyName != 'transform') return
+    //     e.target.classList.remove('playing')
+    // }
+    // // const keys = document.querySelectorAll('.key')
+    // // keys.forEach(key=>key.addEventListener('transitionend',removeTransition))
+    // const keys = document.querySelector('.keys')
+    // keys.addEventListener('transitionend',removeTransition)
 </script>
 
 </body>
