--- a/03-css-variables/index.html
+++ b/03-css-variables/index.html
@@ -18,14 +18,14 @@
         <input type="color" id="base" name="base" value="#8a5454">
     </div>
 
-    <img src="../drumpkit-1/assets/background.jpg" alt="">
+    <img src="../01-drumpkit/assets/background.jpg" alt="">
 
     <style>
                                                                      
         :root{
             --base :#8a5454;
-            --spacing : 10px;
-            --blur : 10px;
+            --spacing : 40px;
+            --blur : 0px;
         }
 
         img{
@@ -56,10 +56,18 @@
 
     <script>
         const inputs = document.querySelectorAll('.controlls input')//input is a nodelist not an array , difference is that it does not h
+        // function updateInput(){
+        //     const suffix = this.dataset.sizing || '';
+        //     console.log(suffix)
+        //     document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix)
+        // }
+        const img = document.querySelector('img')
+
         function updateInput(){
-            const suffix = this.dataset.sizing || '';
-            console.log(suffix)
-            document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix)
+            const suffix = this.dataset.sizing || ''
+            img.style.setProperty(`--${this.name}`,this.value+suffix)
+
+
         }
         inputs.forEach(input=>input.addEventListener('change',updateInput))
         inputs.forEach(input=>input.addEventListener('mousemove',updateInput))
