--- a/16-css-text-shadow-mouse-move/index.html
+++ b/16-css-text-shadow-mouse-move/index.html
@@ -45,7 +45,7 @@
             let { offsetX: x, offsetY: y } = e
             if (this !== e.target) {
                 x = x + e.target.offsetLeft
-                y = y + e.tsarget.offsetTop
+                y = y + e.target.offsetTop
             }
             const xWalk = Math.round((x / width * walk) - (walk / 2))
             const yWalk = Math.round((y / height * walk) - (walk / 2))
