--- a/20-speech-detection/index.html
+++ b/20-speech-detection/index.html
@@ -60,23 +60,21 @@
         const words = document.querySelector('.words')
         words.appendChild(p)
 
-        recognition.addEventListener('results',e=>{
-            console.log(e)
-        })
+       
 
         recognition.addEventListener('result',e=>{
-            const trsnscipt = Array.from(e.results)
+            const trasnscipt = Array.from(e.results)
             .map(result => result[0])
-            .map(result => result.trsnscipt)
+            .map(result => result.trasnscipt)
             .join('')
 
-            p.textContent = trsnscipt
+            p.textContent = trasnscipt
             if(e.results[0].isFinal){
                 p = document.createElement('p')
                 words.appendChild(p)
             }
 
-            if(trsnscipt.includes('get the weather')){
+            if(trasnscipt.includes('get the weather')){
                 console.log('getting the weather')
             }
         })
